--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@mantine/carousel": "^6.0.8",
     "bootstrap": "^5.3.0-alpha3",
-    "embla-carousel": "^7.1.0",
-    "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.10.0",
-    "react-spotify-embed": "^2.0.3"
+    "react-spotify-embed": "^2.0.3",
+    "swiper": "^9.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
